syntax = "proto3";

option java_package = "smr.shop.libs.grpc.coupon";
option java_multiple_files = true;
import "object/CouponId.proto";


message CouponGrpcResponse {
  string id = 1;
  string code = 2;
  int64 shopId = 3;
  string couponType = 4;
  string discountType = 5;
  double amount = 6;
  sint32 percentage = 7;
  double maxDiscountPrice = 8;
  bool isExpired = 9;
}

message CouponUsageGrpcResponse {
  bool isUsed = 1;
}

service CouponService {
  rpc getCouponByCode(CouponGrpcCode) returns (CouponGrpcResponse);
  rpc getCouponUsage(CouponUsageGrpc) returns (CouponUsageGrpcResponse);
}